--- a/index.html
+++ b/index.html
@@ -133,6 +133,13 @@
       <br />
     </div>
     <script src="src/index.js"></script>
-    <footer>SheCodes Plus Workshop Project</footer>
+    <footer>
+      Coded by
+      <a
+        href="https://github.com/abigailyi/Weather-App-Project"
+        class="footer-link"
+        >Abigail Yi</a
+      ><br />Project for SheCodes Plus Workshop
+    </footer>
   </body>
 </html>
