--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
       <a
         href="https://github.com/abigailyi/Weather-App-Project"
         class="footer-link"
+        target="_blank"
         >Abigail Yi</a
       ><br />Project for SheCodes Plus Workshop
     </footer>
