--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
     </div>
     <script src="src/index.js"></script>
     <footer>
-      Coded by
       <a
         href="https://github.com/abigailyi/Weather-App-Project"
         class="footer-link"
         target="_blank"
-        >Abigail Yi</a
-      ><br />Project for SheCodes Plus Workshop
+        >Open-source code</a
+      >
+      by Abigail Yi<br />Project for SheCodes Plus Workshop
     </footer>
   </body>
 </html>
