Added Week Forecast (HTML/CSS/JS)
Forecast coded with basic HTML/CSS
Used JS to loop through each day to setup before live data is plugged in

--- a/index.html
+++ b/index.html
@@ -64,50 +64,7 @@
         </div>
       </div>
       <h3>This week's forecast:</h3>
-      <div class="row weekForecast">
-        <div class="col col-week">
-          <p class="day">Mon</p>
-          <div class="week">
-            <img src="image/03-rain.png" class="week-icon" />
-          </div>
-          <p class="day temp">54 °F</p>
-        </div>
-        <div class="col col-week">
-          <p class="day">Tues</p>
-          <div class="week">
-            <img src="image/05-atmosphere.png" class="week-icon" />
-          </div>
-          <p class="day temp">60 °F</p>
-        </div>
-        <div class="col col-week">
-          <p class="day">Wed</p>
-          <div class="week">
-            <img src="image/02-clouds.png" class="week-icon" />
-          </div>
-          <p class="day temp">75 °F</p>
-        </div>
-        <div class="col col-week">
-          <p class="day">Thu</p>
-          <div class="week">
-            <img src="image/01-clear.png" class="week-icon" />
-          </div>
-          <p class="day temp">82 °F</p>
-        </div>
-        <div class="col col-week">
-          <p class="day">Fri</p>
-          <div class="week">
-            <img src="image/01-clear.png" class="week-icon" />
-          </div>
-          <p class="day temp">85 °F</p>
-        </div>
-        <div class="col col-week">
-          <p class="day">Sat</p>
-          <div class="week">
-            <img src="image/01-clear.png" class="week-icon" />
-          </div>
-          <p class="day temp">82 °F</p>
-        </div>
-      </div>
+      <div class="weather-forecast" id="forecast"></div>
       <br />
       <br />
     </div>
