--- a/index.html
+++ b/index.html
@@ -4,79 +4,138 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
+
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/style.css" />
-    <title>Weather App - Project</title>
+
+    <script
+      src="https://kit.fontawesome.com/bad6c54a78.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <link rel="stylesheet" href="src/style2.css" />
+    <title>Weather App - SheCodes JS Project</title>
   </head>
+
   <body>
-    <div class="primary">
-      <form id="city-search">
-        <input
-          type="text"
-          name="search"
-          id="city-input"
-          class="search"
-          placeholder="Enter city name"
-        />
-        <input type="submit" value="Search" class="btn btn-sm search-btn" />
-        <button class="btn btn-sm local-btn" id="currentLocation">Local</button>
-      </form>
+    <div class="container">
+      <div class="primary" id="main-container">
+        <div class="top-row col-1 float-end" id="top-row">
+          <button
+            class="mode-btn dark float-end"
+            type="button"
+            onclick="setMode('dark')"
+            title="Dark Mode"
+          >
+            <i class="fas fa-lightbulb"></i>
+          </button>
+          <button
+            class="float-end mode-btn light"
+            type="button"
+            onclick="setMode('light')"
+            title="Light Mode"
+          >
+            <i class="far fa-lightbulb"></i>
+          </button>
+        </div>
+        <div class="search-row col-11">
+          <span class="float-left" id="search-row">
+            <form class="search-engine">
+              <input
+                type="text"
+                placeholder="Search for a city"
+                class="search-box"
+              />
+              <button type="submit" id="search-button" class="btn btn-sm">
+                Search <i class="fas fa-search"></i>
+              </button>
+              <button id="search-button-location" class="btn btn-sm">
+                Location <i class="fas fa-map-marker-alt"></i>
+              </button>
+            </form>
+          </span>
+        </div>
 
-      <div class="currentinfo">
-        <div class="row todayRow">
-          <div class="col">
-            <div class="today">
-              <span id="todayIcon">
-                <img src="image/01-clear.png" class="todayIcon"
-              /></span>
-              <div class="current-temp">
-                <strong id="main-temp"></strong>
-                <span class="units"
-                  ><a href="#" id="celsius-link" class="active">°C</a> |
-                  <a href="#" id="fahrenheit-link">°F</a></span
-                >
-              </div>
-              <p id="high-low"></p>
-              <p id="feels-like">Feels like: <span id="feels-temp"></span>°</p>
-            </div>
+        <div class="row">
+          <div class="col-6" id="current-temp-col">
+            <ul class="current-temp-weather">
+              <li>
+                <div class="clearfix">
+                  <div class="city-location">Los Angeles</div>
+                  <div class="date-time"></div>
+                  <img
+                    src=""
+                    alt=""
+                    id="weather-icon"
+                    class="current-weather-icon float-left"
+                  />
+                  <div class="float-right">
+                    <span class="current-temp float-left"> </span>
+                    <span class="temp-units float-right">
+                      <a href="#" id="celsius">°C</a>
+                      |
+                      <a href="#" id="fahrenheit" class="active">°F</a>
+                    </span>
+                  </div>
+                </div>
+              </li>
+            </ul>
           </div>
-          <div class="col today-data">
-            <h1 id="city"></h1>
-            <h2 class="weather-type" id="main-desc"></h2>
-            <br />
-            <p id="currentTime">Tuesday, July 13th 2021, 2:16</p>
-            <small id="details"></small>
 
-            <br />
+          <div class="col-6">
+            <ul class="current-weather-stats">
+              <li>
+                <i class="fab fa-discourse"></i> Looks like :
+                <span class="current-weather-looks"></span>
+              </li>
+              <li>
+                <i class="fas fa-temperature-low"></i> Feels like :
+                <span class="feel-degree"></span>
+                <span class="feel-unit"></span>
+              </li>
+              <li>
+                <i class="fas fa-wind"></i> Wind :
+                <span class="wind-speed"> 11 </span>
+                <span class="wind-direction"> SW </span>
+                <span class="wind-unit"> km/h </span>
+              </li>
+              <li>
+                <i class="fas fa-water"></i> Humidity :
+                <span class="current-humidity"> 45 % </span>
+              </li>
+              <li>
+                <i class="fas fa-cloud-rain"></i> Precipitation :
+                <span class="current-precipitation"> 20</span> %
+              </li>
+            </ul>
           </div>
+
+          <div class="week-forecast-row"></div>
         </div>
       </div>
-      <h3>This week's forecast:</h3>
-      <div class="weather-forecast" id="forecast"></div>
-      <br />
-      <br />
+      <p class="footer">
+        <a
+          href="https://github.com/abigailyi/Weather-App-Project"
+          target="_blank"
+          class="source-code"
+          >Open-source code</a
+        >
+        by Abigail Yi
+      </p>
     </div>
-    <script src="src/index.js"></script>
-    <footer>
-      <a
-        href="https://github.com/abigailyi/Weather-App-Project"
-        class="footer-link"
-        target="_blank"
-        >Open-source code</a
-      >
-      by Abigail Yi<br />Project for SheCodes Plus Workshop
-    </footer>
+    <script src="src/index2.js"></script>
   </body>
 </html>
