--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="src/style2.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Weather App - SheCodes JS Project</title>
   </head>
 
@@ -136,6 +136,6 @@
         by Abigail Yi
       </p>
     </div>
-    <script src="src/index2.js"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
