Added search form reset + adjusted naming of variables

--- a/index.html
+++ b/index.html
@@ -51,13 +51,15 @@
             <i class="far fa-lightbulb"></i>
           </button>
         </div>
-        <div class="search-row col-11">
+        <div class="search-row col-auto">
           <span class="float-left" id="search-row">
-            <form class="search-engine">
+            <form class="search-form">
               <input
                 type="text"
+                name="search"
                 placeholder="Search for a city"
                 class="search-box"
+                id="searchForm"
               />
               <button type="submit" id="search-button" class="btn btn-sm">
                 Search <i class="fas fa-search"></i>
